--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/material": "^5.10.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.9.3",
     "leaflet-geosearch": "^3.7.0",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.1.0",
     "react-scripts": "5.0.1",
@@ -39,6 +44,11 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.0"
+    "@types/jest": "^29.2.3",
+    "@types/leaflet": "^1.9.0",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "typescript": "^4.9.3"
   }
 }
