--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.2",
     "leaflet": "^1.9.3",
     "leaflet-geosearch": "^3.7.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.1.0",
     "react-scripts": "5.0.1",
