--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-leaflet": "^4.1.0",
+    "react-router": "^6.4.3",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
